@@ -2,6 +2,8 @@
 ChangeLog
  [ + added, - removed, * changed ]
  * 03Feb2015 Sanitized memory reference samples point to the variable
+             Fix compilation with -lpthread/-pthread when building
+               pthread instrumentation libraries
  * 01Feb2016 Improve memory reference samples point to the variable
  + 01Feb2016 Emit event OpenCL thread id for command queue in clFinish
  + 22Jan2016 Add instrumentation for cudaDeviceSynchronize
